--- a/action.yml
+++ b/action.yml
@@ -1,13 +1,15 @@
 name: 'Actions js Hello World'
-description: 'Greet someone and record the time'
+description: 'Hello World'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
     required: true
     default: 'World'
 outputs:
-  time: # id of output
-    description: 'The time we greeted you'
+  hello:
+    description: 'Hello World!!'
+  #time: # id of output
+  #  description: 'The time we greeted you'
 runs:
   using: 'node12'
   main: 'index.js'
